--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge2A.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge2A.yml
@@ -197,7 +197,7 @@ ethernet_interfaces:
   type: routed
   ip_address: 172.17.0.5/31
   flow_tracker:
-    hardware: WAN-FLOW-TRACKER
+    hardware: FLOW-TRACKER
 - name: Ethernet52.1000
   peer: site-ha-enabled-leaf2A
   peer_interface: Ethernet1.1000
@@ -210,7 +210,7 @@ ethernet_interfaces:
   mtu: 9214
   ip_address: 172.17.0.5/31
   flow_tracker:
-    hardware: WAN-FLOW-TRACKER
+    hardware: FLOW-TRACKER
 - name: Ethernet52.142
   peer: site-ha-enabled-leaf2A
   peer_interface: Ethernet1.142
@@ -223,7 +223,7 @@ ethernet_interfaces:
   mtu: 9214
   ip_address: 172.17.0.5/31
   flow_tracker:
-    hardware: WAN-FLOW-TRACKER
+    hardware: FLOW-TRACKER
 - name: Ethernet52.666
   peer: site-ha-enabled-leaf2A
   peer_interface: Ethernet1.666
@@ -236,7 +236,7 @@ ethernet_interfaces:
   mtu: 9214
   ip_address: 172.17.0.5/31
   flow_tracker:
-    hardware: WAN-FLOW-TRACKER
+    hardware: FLOW-TRACKER
 - name: Ethernet53
   peer: site-ha-enabled-leaf2B
   peer_interface: Ethernet1
@@ -247,7 +247,7 @@ ethernet_interfaces:
   type: routed
   ip_address: 172.17.0.7/31
   flow_tracker:
-    hardware: WAN-FLOW-TRACKER
+    hardware: FLOW-TRACKER
 - name: Ethernet53.1000
   peer: site-ha-enabled-leaf2B
   peer_interface: Ethernet1.1000
@@ -260,7 +260,7 @@ ethernet_interfaces:
   mtu: 9214
   ip_address: 172.17.0.7/31
   flow_tracker:
-    hardware: WAN-FLOW-TRACKER
+    hardware: FLOW-TRACKER
 - name: Ethernet53.142
   peer: site-ha-enabled-leaf2B
   peer_interface: Ethernet1.142
@@ -273,7 +273,7 @@ ethernet_interfaces:
   mtu: 9214
   ip_address: 172.17.0.7/31
   flow_tracker:
-    hardware: WAN-FLOW-TRACKER
+    hardware: FLOW-TRACKER
 - name: Ethernet53.666
   peer: site-ha-enabled-leaf2B
   peer_interface: Ethernet1.666
@@ -286,7 +286,7 @@ ethernet_interfaces:
   mtu: 9214
   ip_address: 172.17.0.7/31
   flow_tracker:
-    hardware: WAN-FLOW-TRACKER
+    hardware: FLOW-TRACKER
 - name: Ethernet1
   peer_type: l3_interface
   ip_address: dhcp
@@ -295,7 +295,7 @@ ethernet_interfaces:
   description: ATT_423-01
   dhcp_client_accept_default_route: true
   flow_tracker:
-    hardware: WAN-FLOW-TRACKER
+    hardware: FLOW-TRACKER
 loopback_interfaces:
 - name: Loopback0
   description: Router_ID
@@ -408,16 +408,16 @@ agents:
 flow_tracking:
   hardware:
     trackers:
-    - name: WAN-FLOW-TRACKER
+    - name: FLOW-TRACKER
       record_export:
         on_inactive_timeout: 70000
-        on_interval: 5000
+        on_interval: 300000
       exporters:
-      - name: DPI-EXPORTER
+      - name: CV-TELEMETRY
         collector:
           host: 127.0.0.1
         local_interface: Loopback0
-        template_interval: 5000
+        template_interval: 3600000
     shutdown: false
 ip_extcommunity_lists:
 - name: ECL-EVPN-SOO
@@ -698,7 +698,7 @@ dps_interfaces:
   mtu: 9214
   ip_address: 192.168.142.2/32
   flow_tracker:
-    hardware: WAN-FLOW-TRACKER
+    hardware: FLOW-TRACKER
 vxlan_interface:
   Vxlan1:
     description: cv-pathfinder-edge2A_VTEP
