--- a/ansible_collections/arista/avd/molecule/eos_designs_negative_unit_tests/inventory/hosts.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_negative_unit_tests/inventory/hosts.yml
@@ -51,6 +51,14 @@ all:
         fabric_p2p_vrfs:
           hosts:
             invalid-uplink-type-p2p-vrfs-underlay-router-false:
+        fabric_downlink_pools_missing:
+          hosts:
+            downlink-pools-missing-spine:
+            downlink-pools-missing-l3leaf:
+        fabric_downlink_pools_duplicate:
+          hosts:
+            downlink-pools-duplicate-spine:
+            downlink-pools-duplicate-l3leaf:
     EOS_DESIGNS_FAILURES: # Add cases that fail during 'eos_designs_structured_config' phase
       hosts:
         failure-port-channel:
@@ -116,11 +124,3 @@ all:
           hosts:
             duplicate-vlans-mlag-a:
             duplicate-vlans-mlag-b:
-        NO_POOLS_TESTS:
-          hosts:
-            no-pools-spine:
-            no-pools-l3leaf:
-        DUPLICATE_POOLS_TESTS:
-          hosts:
-            duplicate-pools-spine:
-            duplicate-pools-l3leaf:
