--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -13571,43 +13571,46 @@ keys:
                     valid_values:
                     - permit
                     - deny
-      segments:
+      vrfs:
         type: list
-        description: Defining the segments and associated policies.
+        description: The name of the VRF that the segments and policies are defined
+          in.
         required: true
         primary_key: name
         items:
           type: dict
-          keys:
-            name:
-              type: str
-              description: Segment name.
-            vrf:
-              type: str
-              default: default
-            definition:
-              type: list
-              required: true
-              description: The set of match-lists that define the segment. These can
-                be a mix of IPv4 and IPv6 lists.
-              items:
-                type: dict
-                keys:
-                  name:
-                    type: str
-                    description: The name of the prefix match-list.
-                  address_family:
-                    type: str
-                    required: true
-                    description: Indicate which address family the match list belongs
-                      to e.g. ipv4 or ipv6.
-                    valid_values:
-                    - ipv4
-                    - ipv6
-                  covered:
-                    type: bool
-                    default: false
-            policies:
+          name:
+            type: str
+          segments:
+            type: list
+            primary_key: name
+            keys:
+              name:
+                type: str
+                description: Segment name.
+              definition:
+                type: list
+                required: true
+                description: The set of match-lists that define the segment. These
+                  can be a mix of IPv4 and IPv6 lists.
+                items:
+                  type: dict
+                  keys:
+                    name:
+                      type: str
+                      description: The name of the prefix match-list.
+                    address_family:
+                      type: str
+                      required: true
+                      description: Indicate which address family the match list belongs
+                        to e.g. ipv4 or ipv6.
+                      valid_values:
+                      - ipv4
+                      - ipv6
+                    covered:
+                      type: bool
+                      default: false
+              policies: null
               type: list
               required: true
               description: The policies controlling traffic into the segment.
