--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_segment_security.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_segment_security.schema.yml
@@ -48,9 +48,9 @@ keys:
                     valid_values:
                       - "permit"
                       - "deny"
-      segments:
+      vrfs:
         type: list
-        description: Defining the segments and associated policies.
+        description: The name of the VRF that the segments and policies are defined in.
         required: true
         primary_key: name
         items:
@@ -58,40 +58,45 @@ keys:
           keys:
             name:
               type: str
-              description: Segment name.
-            vrf:
-              type: str
-              default: "default"
-            definition:
+            segments:
               type: list
-              required: true
-              description: The set of match-lists that define the segment. These can be a mix of IPv4 and IPv6 lists.
+              primary_key: name
               items:
                 type: dict
                 keys:
                   name:
                     type: str
-                    description: The name of the prefix match-list.
-                  address_family:
-                    type: str
+                    description: Segment name.
+                  definition:
+                    type: list
                     required: true
-                    description: Indicate which address family the match list belongs to e.g. ipv4 or ipv6.
-                    valid_values:
-                      - "ipv4"
-                      - "ipv6"
-                  covered:
-                    type: bool
-                    default: false
-            policies:
-              type: list
-              required: true
-              description: The policies controlling traffic into the segment.
-              items:
-                type: dict
-                keys:
-                  source:
-                    type: str
-                    description: The name of the source segment.
-                  policy:
-                    type: str
-                    description: The name of the policy to apply. The built-in policies are ‘policy-forward-all’ and ‘policy-drop-all’.
+                    description: The set of match-lists that define the segment. These can be a mix of IPv4 and IPv6 lists.
+                    items:
+                      type: dict
+                      keys:
+                        name:
+                          type: str
+                          description: The name of the prefix match-list.
+                        address_family:
+                          type: str
+                          required: true
+                          description: Indicate which address family the match list belongs to e.g. ipv4 or ipv6.
+                          valid_values:
+                            - "ipv4"
+                            - "ipv6"
+                        covered:
+                          type: bool
+                          default: false
+                  policies:
+                    type: list
+                    required: true
+                    description: The policies controlling traffic into the segment.
+                    items:
+                      type: dict
+                      keys:
+                        source:
+                          type: str
+                          description: The name of the source segment.
+                        policy:
+                          type: str
+                          description: The name of the policy to apply. The built-in policies are ‘policy-forward-all’ and ‘policy-drop-all’.
