Feat(eos_designs): Add platform specific management security entropy source settings

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/default_interface_mtu_platform.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/default_interface_mtu_platform.yml
@@ -11,6 +11,8 @@ interface_defaults:
 vrfs:
 - name: MGMT
   ip_routing: false
+management_security:
+  entropy_source: hardware
 management_api_http:
   enable_vrfs:
   - name: MGMT
