--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/platform_settings.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/platform_settings.schema.yml
@@ -96,6 +96,8 @@ keys:
         raw_eos_cli:
           type: str
           description: EOS CLI rendered directly on the root level of the final EOS configuration.
+        security_entropy_source:
+          type: str
     default:
       - platforms:
           - default
