--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -3383,6 +3383,52 @@ keys:
           - on-boot
           - on-logging
           - on-startup-config
+          - on-maintenance
+        trigger_on_maintenance:
+          description: Settings required for trigger 'on-maintenance'.
+          type: dict
+          keys:
+            operation:
+              type: str
+              required: true
+              valid_values:
+              - enter
+              - exit
+            bgp_peer:
+              description: 'Ipv4/Ipv6 address or peer group name.
+
+                Trigger condition occurs on maintenance operation of specified BGP
+                peer.'
+              type: str
+            action:
+              type: str
+              required: true
+              description: Action for maintenance operation.
+              valid_values:
+              - after
+              - before
+              - all
+              - begin
+              - end
+            stage:
+              type: str
+              description: Action is triggered after/before specified stage.
+              valid_values:
+              - bgp
+              - linkdown
+              - mlag
+              - ratemon
+            vrf:
+              type: str
+              description: VRF name. VRF can be defined for "bgp_peer" only.
+            interface:
+              type: str
+              description: Trigger condition occurs on maintenance operation of specified
+                interface.
+            unit:
+              type: str
+              description: Name of unit. Trigger condition occurs on maintenance operation
+                of specified unit
         regex:
           type: str
           description: 'Regular expression to use for searching log messages. Required
