Fix(eos_designs): Fix missing features from lacp fallback individual

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/connected_endpoints.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/connected_endpoints.cfg
@@ -13,6 +13,9 @@ no aaa root
 !
 vrf instance MGMT
 !
+link tracking group LT_GROUP1
+   recovery delay 300
+!
 interface Port-Channel5
    description OLD_SW-1/5_PORT_CHANNEL_DESCRIPTION
    no shutdown
@@ -30,6 +33,13 @@ interface Port-Channel10
 !
 interface Port-Channel12
    description INDIVIDUAL_1_INDIVIDUAL_1
+   no shutdown
+   switchport
+   port-channel lacp fallback timeout 90
+   port-channel lacp fallback individual
+!
+interface Port-Channel15
+   description INDIVIDUAL_2_TRUNK_PHONE
    no shutdown
    switchport
    port-channel lacp fallback timeout 90
@@ -82,9 +92,21 @@ interface Ethernet12
    switchport trunk allowed vlan 1,2,3,4,5,6,7,123,234
    switchport mode trunk
    switchport
+   dot1x unauthorized access vlan membership egress
+   dot1x unauthorized native vlan membership egress
    channel-group 12 mode active
+   poe disabled
+   ptp enable
+   ptp sync-message interval -3
+   ptp announce interval 0
+   ptp transport ipv4
+   ptp announce timeout 3
+   ptp delay-req interval -3
+   ptp role master
+   service-profile MYQOS
    spanning-tree portfast
    spanning-tree bpdufilter enable
+   no sflow enable
 !
 interface Ethernet13
    description INDIVIDUAL_1
@@ -93,9 +115,21 @@ interface Ethernet13
    switchport trunk allowed vlan 1,2,3,4,5,6,7,123,234
    switchport mode trunk
    switchport
+   dot1x unauthorized access vlan membership egress
+   dot1x unauthorized native vlan membership egress
    channel-group 12 mode active
+   poe disabled
+   ptp enable
+   ptp sync-message interval -3
+   ptp announce interval 0
+   ptp transport ipv4
+   ptp announce timeout 3
+   ptp delay-req interval -3
+   ptp role master
+   service-profile MYQOS
    spanning-tree portfast
    spanning-tree bpdufilter enable
+   no sflow enable
 !
 interface Ethernet14
    description DOT1X_UNAUTHORIZED
@@ -106,8 +140,38 @@ interface Ethernet14
    switchport
    dot1x unauthorized access vlan membership egress
    dot1x unauthorized native vlan membership egress
+   poe disabled
+   ptp enable
+   ptp sync-message interval -3
+   ptp announce interval 0
+   ptp transport ipv4
+   ptp announce timeout 3
+   ptp delay-req interval -3
+   ptp role master
+   service-profile MYQOS
    spanning-tree portfast
    spanning-tree bpdufilter enable
+   no sflow enable
+!
+interface Ethernet15
+   description INDIVIDUAL_2_TRUNK_PHONE
+   no shutdown
+   switchport trunk native vlan 123
+   switchport phone vlan 321
+   switchport mode trunk phone
+   switchport
+   channel-group 15 mode active
+   link tracking group LT_GROUP1 downstream
+!
+interface Ethernet16
+   description INDIVIDUAL_2_TRUNK_PHONE
+   no shutdown
+   switchport trunk native vlan 123
+   switchport phone vlan 321
+   switchport mode trunk phone
+   switchport
+   channel-group 15 mode active
+   link tracking group LT_GROUP1 downstream
 no ip routing vrf MGMT
 !
 management api http-commands
