--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/host_vars/connected_endpoints.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/host_vars/connected_endpoints.yml
@@ -5,6 +5,9 @@ l2leaf:
   defaults:
   nodes:
     - name: connected_endpoints
+      platform: 720XP
+      link_tracking:
+        enabled: true
 
 servers:
   # single port override physical port description
@@ -63,7 +66,16 @@ servers:
       - switches: [connected_endpoints]
         switch_ports: [Ethernet14]
         profile: INDIVIDUAL_TRUNK
-
+  - name: INDIVIDUAL_2_TRUNK_PHONE
+    adapters:
+      - switches: [connected_endpoints, connected_endpoints]
+        switch_ports: [Ethernet15, Ethernet16]
+        port_channel:
+          mode: "active"
+          lacp_fallback:
+            mode: individual
+            individual:
+              profile: INDIVIDUAL_TRUNK_PHONE
 port_profiles:
   - profile: INDIVIDUAL_TRUNK
     mode: trunk
@@ -76,3 +88,16 @@ port_profiles:
       unauthorized:
         access_vlan_membership_egress: True
         native_vlan_membership_egress: True
+    qos_profile: MYQOS
+    poe:
+      disabled: true
+    ptp:
+      enabled: true
+    sflow: false
+
+  - profile: INDIVIDUAL_TRUNK_PHONE
+    mode: trunk phone
+    native_vlan: 123
+    phone_vlan: 321
+    link_tracking:
+      enabled: true
